2009-03-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/file-uri/Makefile.am
	* plug-ins/file-uri/gimpmountoperation.[ch]: removed these files.

	* plug-ins/file-uri/uri-backend-gvfs.c: use GtkMountOperation
	instead of our copy of this widget.

2009-03-05  Sven Neumann  <sven@gimp.org>

	* configure.in: depend on GTK+ >= 2.14.4.

	* INSTALL: changed accordingly.

2009-03-05  Sven Neumann  <sven@gimp.org>

	Bug 573695 – 1-bit white background saved as PBM becomes all black

	* plug-ins/common/file-pnm.c: need to handle the special case that
	the image colormap has only one entry.

2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI

	* tools/pdbgen/pdb/image.pdb: added new procedure gimp-image-get-uri.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

	* plug-ins/pygimp/pygimp-image.c: wrap the new procedure into an
	Image attribute.

2009-03-04  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb (image_get_filename): improved docs
	for gimp-image-get-filename.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI

	* tools/pdbgen/pdb/image.pdb (image_get_name_invoker): use
	gimp_image_get_display_name().

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2009-03-03  Sven Neumann  <sven@gimp.org>

	Bug 520078 – Rotate brushes

	* app/core/gimpbrush-transform.c: applied patch from Tal that
	improves bilinear interpolation for the brush transformations and
	fixes a bug in the calculation of the transformation matrix.

2009-03-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpfilteredcontainer.[ch]
	* app/core/gimptag.c
	* app/core/gimptagcache.[ch]: codingstylize. Call iterator GList*
	variables simply "list" just as we call integers simply "i".

2009-03-02  Michael Natterer  <mitch@gimp.org>
